force-app/main/default/objects/Volunteer_Program_Interest__c/Volunteer_Program_Interest__c.object-meta.xml
<CustomObject>
    <description>Junction object linking a Person Account (volunteer) to a Volunteer Initiative they are interested in. Supports matching volunteers to relevant opportunities.</description>
    <label>Volunteer Program Interest</label>
    <nameField>
        <displayFormat>VPI-{0000}</displayFormat>
        <label>Volunteer Program Interest Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Volunteer Program Interests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>