force-app/main/default/objects/Volunteer_Program_Interest__c/fields/Volunteer__c.field-meta.xml
<CustomField>
    <fullName>Volunteer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Volunteer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Volunteer Program Interests</relationshipLabel>
    <relationshipName>Volunteer_Program_Interests</relationshipName>
    <type>Lookup</type>
</CustomField>