force-app/main/default/objects/Volunteer_Program_Interest__c/fields/Volunteer_Initiative__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_Initiative__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Volunteer Initiative</label>
    <referenceTo>VolunteerInitiative</referenceTo>
    <relationshipLabel>Volunteer Program Interests</relationshipLabel>
    <relationshipName>Volunteer_Program_Interests</relationshipName>
    <type>Lookup</type>
</CustomField>